--- a/ShopGo/Info.plist
+++ b/ShopGo/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>ProfileStoryBoard</string>
+					<string>CartAnimationStoryboard</string>
 				</dict>
 			</array>
 		</dict>
